# entityschemav1

./: README.md  pyproject.toml
entityschemav1/: __init__.py  entityschemav0.5.py  entityschemav1.py  prompt.py  validate.py
entityschemav1/prompts/: infer_prompt.txt  prod_prompt.txt
