[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "entityschemav1"
version = "0.1.0"
description = "Pydantic schema for entity data extraction - version 1"
authors = [{name = "Dr. Joe Zhang", email = "jzhang@nhs.net"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[tool.setuptools.package-data]
entityschemav1 = ["prompts/*.txt"]